--- a/my-app/package.json
+++ b/my-app/package.json
@@ -2,6 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "main": "src/index.tsx",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.4",
@@ -12,13 +13,17 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "ts-loader": "^9.3.1",
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "magic": "webpack"
   },
   "eslintConfig": {
     "extends": [
@@ -39,6 +44,7 @@
     ]
   },
   "devDependencies": {
-    "sass": "^1.53.0"
+    "sass": "^1.53.0",
+    "typescript": "^4.7.4"
   }
 }
