--- a/my-app/package.json
+++ b/my-app/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject",
     "magic": "webpack"
   },
@@ -45,7 +45,12 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/jest": "^28.1.7",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
     "sass": "^1.53.0",
+    "ts-jest": "^28.0.8",
     "typescript": "^4.7.4"
   }
 }
